--- a/src/content/blog/en/post-1.md.template
+++ b/src/content/blog/en/post-1.md.template
@@ -1,11 +1,11 @@
 ---
-title: "Maximizing Efficiency with ScrewFast's Cutting-Edge Tools"
-description: "Innovating Construction Efficiency with Precision Tools & Support"
-author: "Jacob"
-authorImage: "@/images/blog/jacob.avif"
+title: "Content is comeing soon"
+description: "Content is comeing soon"
+author: "HuskyNZ"
+authorImage: ""
 authorImageAlt: "Avatar Description"
 pubDate: 2024-02-06
-cardImage: "@/images/blog/post-1.avif"
+cardImage: ""
 cardImageAlt: "Top view mechanical tools arrangement"
 readTime: 4
 tags: ["tools", "construction", "workflow" ]
