--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.3",
+    "@astrojs/netlify": "^5.5.1",
     "@astrojs/starlight": "^0.26.1",
     "astro": "^4.10.2",
     "sharp": "^0.32.5",
-    "@astrojs/check": "^0.9.3",
     "typescript": "^5.5.4"
   }
 }
