--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@astrojs/check": "^0.9.3",
     "@astrojs/netlify": "^5.5.1",
     "@astrojs/starlight": "^0.26.1",
+    "@astrojs/starlight-tailwind": "^2.0.3",
+    "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.10.2",
     "sharp": "^0.32.5",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
   }
 }
